--- a/src/htmlFiles/implement.html
+++ b/src/htmlFiles/implement.html
@@ -22,6 +22,7 @@ and open the template in the editor.
                         <p id="text">The GUI implements the following:</p>
             <ol>
                 <li id="label"> Show all Persons</li>
+                <li id="label"><a href="http://doingormpranit.cloudapp.net:9999/Person"> Get all Persons</a></li>
                <li id="label"> Show a single Person(by selecting from list of all persons)</li>
                <li id="label"> Add a Person</li>
                <li id="label"> Delete a Person</li>
