--- a/src/htmlFiles/mainPage.html
+++ b/src/htmlFiles/mainPage.html
@@ -9,17 +9,35 @@ and open the template in the editor.
         <title>ORM & REST</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" type="text/css" href="new.css">
+        <link rel="stylesheet" type="text/css" href="new.css">
     </head>
     <body>
         <h1>This is our main page</h1>
         <hr>        
+        <div align="center">
+            <table><tr><td>
+                        This project does the following
+                    </td>
+                </tr>
+                <td>
+                    <ul>
+                        <li>•	Use JPA to map between Java object and Relational Tables
+                        </li>
+                        <li>•	Use JPA to map Java Inheritance to Relational Tables
+                        </li>
+                        <li>•	Expose business functionality via a REST-API and JSON dto’s
+                        </li>
+                        <li>•	Build dynamic html pages that updates content via AJAX and a server REST-API.
+                        </li>                            </ul>
+                </td></table>
+        </div>
+        <hr>
         <a href="implement.html" id="link1"><p class="link">Link to Interface</p></a >
         <hr>
         <a href="https://github.com/pranit360/ca2-ORM-and-REST" id="link1"><p class="link">Link to GitHub.</p></a >
         <hr>
         <a href="Documentation.docx" id="link1"><p class="link">Link to Documentation.</p></a >
         <hr>
-        <div>TODO write content</div>
+        <div>**********</div>
     </body>
 </html>
